--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = EDK2/edk2-edk2-stable201911
 	url = https://github.com/haha998-w/edk2.git
 	branch = edk2-stable201911
+[submodule "vdiskchain"]
+	path = vdiskchain
+	url = https://github.com/haha998-w/vdiskchain.git
